--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
 body {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', sans-serif;
+    background-color: #000;
+    color: #fff;
 }
