--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,40 @@
+@font-face {
+    font-family: "Chalk It Up";
+    src: url("../DjbChalkItUp.ttf");
+}
+
 body {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', sans-serif;
-    background-color: #000;
+    background: url("../images/animal-mix-panorama.jpg");
+    background-size: cover;
+    background-attachment: fixed;
+    font-family: "Chalk It Up", Arial, sans-serif;
+    font-size: 1.5em;
+}
+h1 {
+    margin-top: -10px;
+    margin-bottom: 5px;
+}
+.content {
+    margin: 0 auto;
+    background-image: url("../images/board.png");
     color: #fff;
+    width: 1024px;
+    height: 727px;
+}
+.board-wrapper {
+    position: relative;
+    padding: 5%;
+    width: 100%;
+    height: 100%;
+}
+.display {
+    position: absolute;
+    top: 50%;
+    left: 45%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    text-align: center;
+}
+#word {
+    margin-bottom: 3px;
 }
