--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,9 +2,8 @@
     font-family: "Chalk It Up";
     src: url("../DjbChalkItUp.ttf");
 }
-
 body {
-    background: url("../images/animal-mix-panorama.jpg");
+    background: url("../images/animal-mix-panorama.jpg") #2e9015;
     background-size: cover;
     background-attachment: fixed;
     font-family: "Chalk It Up", Arial, sans-serif;
@@ -17,22 +16,16 @@ h1 {
 .content {
     margin: 0 auto;
     background-image: url("../images/board.png");
-    color: #fff;
+    color: #f6f6f6;
     width: 1024px;
     height: 727px;
 }
 .board-wrapper {
-    position: relative;
     padding: 5%;
-    width: 100%;
-    height: 100%;
 }
 .display {
-    position: absolute;
-    top: 50%;
-    left: 45%;
-    transform: translate(-50%, -50%);
-    width: 100%;
+    margin: 0 auto;
+    margin-top: 20px;
     text-align: center;
 }
 #word {
