--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Chalk It Up";
-    src: url("../DjbChalkItUp.ttf");
+    src: url("../fonts/DjbChalkItUp.ttf");
 }
 body {
     background: url("../images/animal-mix-panorama.jpg") #2e9015;
